--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,14 +25,13 @@
 <body>
 	<div class="page-container">
 		<nav class="navigation">
-			
+			<a class="home-link" href="/"><img class="logo-img" src="/assets/images/logo.png" alt="Polygon Scraper"></a>
 		</nav>
 	<div class="jumbotron">
 		<img class="jumbotron-image" src="/assets/images/jumbotron.jpg" alt="">
 		<div class="jumbotron-overlay">
 			<div class="text-button-container">
-				<h1>All the (Polygon) news that's </h1>
-				<h2>fit to scrape</h2>
+				<h1>All the latest Polygon news </h1>
 				<div class="button-container">
 					<button id="scrape-button">Get New Articles</button>
 					<button id="archive-button" onClick="location.href='/archive';">Archives</a>
